--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -2,7 +2,7 @@
 <h1>My fav 3 movies of all time</h1>
 <hr />
 
-<h1> MS DHONI THE UNTOLD STORY</h1>
+<h1>1.MS DHONI THE UNTOLD STORY</h1>
 <img src="https://2.bp.blogspot.com/-t1ZWrv778BI/WBBy4kkjhRI/AAAAAAAAADY/f2dy_lGa1eM3O-uSsCJ94LLiXMQ6dVyGgCLcB/s1600/screenshot_5.png" />
 <h2><p>This inspiring movie depicts the life of Mahendra Singh Dhoni,my fav cricketer. The way they showed all the struggles that MS had in his initial stage of learning cricket was very motivational.This is the best movie for all the youngsters to follow their aspiration. The journey of Mahi from a small town to Captain of Team India gave really goosebumps. As a true fan of him the obsession that i have towards him and this movie is relentlessly high. </p></h2>
 <h1>2.NANBAN</h1>
