--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,1 +1,17 @@
-<!-- This is one possible solution -->
+<h1>Hy Guys it's my b'day!!!</h1>
+<h1>On the 17th of November</h1>
+<hr>
+<a href="http://127.0.0.1:3000/solution.html">Birthday Invitation</a> <br> <br/>
+
+<img src="https://th.bing.com/th/id/R.e15f649023df82a06d4f524ebc4ace59?rik=IS82NqSXWhalqg&riu=http%3a%2f%2f1.bp.blogspot.com%2f-ngDsKd5RnfA%2fTWFuMnE4JGI%2fAAAAAAAAADQ%2fO8No7zja46k%2fs1600%2fbirthday_cake-1024x768.jpg&ehk=OR2f0FFDUI0bNtP7l%2be%2bLIJwU1%2fQY38kuzHo4Siq73E%3d&risl=&pid=ImgRaw&r=0" height="350" />
+
+<h3>What to bring:</h3>
+<ul>
+  <li>Gifts(Desirably any home made north indian food,photo frames,Dhoni jerseys or t shirts)</li>
+  <li>Cake (I'm really good at eating)</li>
+  <li>An appetite (It will be swiftly developed at that time)</li>
+</ul>
+
+<h3>This is where you need to go:</h3>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
+  map link</a><!-- This is one possible solution -->
