--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -14,4 +14,4 @@
 
 <h3>This is where you need to go:</h3>
 <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a><!-- This is one possible solution -->
+  map link</a><!-- This is one possible solution. -->
